--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.practice.tocode.back.myappprofile.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#69F0AE">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,64 +20,83 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/title"
         android:id="@+id/tv_nano"
+        android:textStyle="bold|italic"
         android:layout_gravity="center_horizontal"
         android:gravity="center"/>
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_height="match_parent"
+        >
+    <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1">
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="SPOTIFY STREAMER"
-        android:id="@+id/button1"
-        android:background="#fe7700"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="SPOTIFY STREAMER"
+                        android:id="@+id/button1"
+                        android:background="#fe7700"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="SCORES APP"
-        android:id="@+id/button2"
-        android:background="#fe7700"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="SCORES APP"
+                        android:id="@+id/button2"
+                        android:background="#fe7700"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="LIBRARY APP"
-        android:id="@+id/button3"
-        android:background="#fe7700"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="LIBRARY APP"
+                        android:id="@+id/button3"
+                        android:background="#fe7700"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="BUILD IT BIGGER"
-        android:id="@+id/button4"
-        android:background="#fe7700"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="BUILD IT BIGGER"
+                        android:id="@+id/button4"
+                        android:background="#fe7700"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="XYZ READER"
-        android:id="@+id/button5"
-        android:background="#fe7700"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="XYZ READER"
+                        android:id="@+id/button5"
+                        android:background="#fe7700"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="CAPSTONE: MY OWN APP"
-        android:id="@+id/button6"
-        android:background="#fb0b03"
-        android:layout_marginTop="18dp"/>
+                    <Button
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:text="CAPSTONE: MY OWN APP"
+                        android:id="@+id/button6"
+                        android:background="#fb0b03"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"/>
 
-    </LinearLayout>
+            </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
