--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,7 +40,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/spotifyButton"
-                        android:id="@+id/button1"
+                        android:id="@+id/SpotifyButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -50,7 +50,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/scoresButton"
-                        android:id="@+id/button2"
+                        android:id="@+id/ScoresButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -60,7 +60,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/libraryButton"
-                        android:id="@+id/button3"
+                        android:id="@+id/LibraryButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -70,7 +70,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/buildBiggerButton"
-                        android:id="@+id/button4"
+                        android:id="@+id/BuilderButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -81,7 +81,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/xyzButton"
-                        android:id="@+id/button5"
+                        android:id="@+id/XyzButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -92,7 +92,7 @@
                         android:layout_width="250dp"
                         android:layout_height="wrap_content"
                         android:text="@string/capstoneButton"
-                        android:id="@+id/button6"
+                        android:id="@+id/CapButtonID"
                         android:background="#FFFF00"
                         android:layout_weight="2"
                         android:layout_marginTop="10dp"
