made correetions to content_main.xml ... doing the weight property correctly

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,40 +37,40 @@
                 >
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/spotifyButton"
-                        android:id="@+id/button1"
+                        android:id="@+id/SpotifyButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"/>
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/scoresButton"
-                        android:id="@+id/button2"
+                        android:id="@+id/ScoresButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"/>
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/libraryButton"
-                        android:id="@+id/button3"
+                        android:id="@+id/LibraryButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"/>
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/buildBiggerButton"
-                        android:id="@+id/button4"
+                        android:id="@+id/BuilderButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -78,10 +78,10 @@
                         android:onClick="buildButton"/>
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/xyzButton"
-                        android:id="@+id/button5"
+                        android:id="@+id/XyzButtonID"
                         android:background="#2979FF"
                         android:layout_weight="1"
                         android:layout_marginTop="10dp"
@@ -89,10 +89,10 @@
                         android:onClick="xyButton"/>
 
                     <Button
-                        android:layout_width="250dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
                         android:text="@string/capstoneButton"
-                        android:id="@+id/button6"
+                        android:id="@+id/CapButtonID"
                         android:background="#FFFF00"
                         android:layout_weight="2"
                         android:layout_marginTop="10dp"
